US 002, add Html structure of the login-page and add the page as the main page

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,1 +1,23 @@
-<p>login-page works!</p>
+<form class="card">
+
+  <div class="form-control">
+    <label for="email">Enter your email:</label>
+    <input id="email" type="email">
+    <div class="validator">
+      <small>Error message</small>
+    </div>
+  </div>
+
+  <div class="form-control">
+    <label for="password">Enter your password:</label>
+    <input id="password" type="password">
+    <div class="validator">
+      <small>Error message</small>
+    </div>
+  </div>
+
+  <div>
+    <button>Sign in</button>
+    <button>Create New User</button>
+  </div>
+</form>
