--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -17,7 +17,12 @@
   </div>
 
   <div>
-    <button>Sign in</button>
-    <button>Create New User</button>
+    <button
+      type="submit"
+    class="btn btn-primary"
+    >Sign in</button>
+    <button
+    class="btn btn-primary"
+    >Create New User</button>
   </div>
 </form>
