US 002, add validation (minLength, special symbols) of the password, add into the message block (Html) of invalid password

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -18,8 +18,14 @@
   <div class="form-control">
     <label for="password">Enter your password:</label>
     <input id="password" type="password" formControlName="password">
-    <div class="validation">
-      <small>Error message</small>
+    <div class="validation"
+         *ngIf="form.get('password').touched && form.get('password').invalid"
+    >
+      <small *ngIf="!form.get('password').value">Password is required; </small>
+      <small *ngIf="form.get('password').errors.minlength">Password should be at least 5 characters length; </small>
+      <small *ngIf="form.get('password').errors.pattern">
+        Password should contain: at least one uppercase letter, one number, one special symbol. $ % . & ! -;
+      </small>
     </div>
   </div>
 
