--- a/src/app/login-page/add-user/add-user.component.html
+++ b/src/app/login-page/add-user/add-user.component.html
@@ -1,5 +1,20 @@
-<form class="card" [formGroup]="form" (ngSubmit)="submit()">
-  <h2>Authentication</h2>
+<form class="card" [formGroup]="form" (ngSubmit)="createUser()">
+  <h2>Create New User</h2>
+
+  <div class="form-control">
+    <label for="userName">Enter your full name</label>
+    <input id="userName" type="text" formControlName="name">
+    <pre>{{ form.get('name').errors | json}}</pre>
+    <div
+      class="validation"
+      *ngIf="form.get('name').touched && form.get('name').invalid"
+    >
+      <small *ngIf="!form.get('name').value">Field name is required; </small>
+      <small *ngIf="form.get('name').errors.minLength">Name should contain at least 8 characters; </small>
+      <small *ngIf="form.get('name').errors.pattern">Name should contain two words, kebab-case, camelCase, Space
+        Case; </small>
+    </div>
+  </div>
 
   <div class="form-control">
     <label for="email">Enter your email:</label>
@@ -33,14 +48,10 @@
     <button
       type="submit"
       class="btn btn-primary"
-      [disabled]="form.invalid || submitted"
-    >Sign in
+      [disabled]="form.invalid"
+    >Create new User
     </button>
 
-    <button
-      class="btn btn-primary"
-      routerLink="/registration"
-    >Create New User
-    </button>
   </div>
 </form>
+
