--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<form class="card" [formGroup]="form" (ngSubmit)="submit()">
+<form class="card" [formGroup]="form">
   <h2>Authentication</h2>
 
   <div class="form-control">
@@ -34,6 +34,7 @@
       type="submit"
       class="btn btn-primary"
       [disabled]="form.invalid || submitted"
+      (click)="submit()"
     >Sign in
     </button>
 
