--- a/src/app/login-page/registration/registration.component.html
+++ b/src/app/login-page/registration/registration.component.html
@@ -1,4 +1,4 @@
-<form class="card" [formGroup]="form" (ngSubmit)="createUser()">
+<form class="card" [formGroup]="form" >
   <h2>Create New User</h2>
 
   <div class="form-control">
@@ -47,7 +47,8 @@
     <button
       type="submit"
       class="btn btn-primary"
-      [disabled]="form.invalid"
+      [disabled]="form.invalid || submitted"
+      (click)="createUser()"
     >Create new User
     </button>
 
